--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,12 +1,35 @@
-﻿<Window x:Class="UI.MainWindow"
+﻿<Window x:Class="TourPlanner.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UI"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        xmlns:local="clr-namespace:TourPlanner.UI"
+        Title="Tour Planner" Height="450" Width="800">
 
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- Title -->
+        <TextBlock Text="Tour Planner" FontSize="24" FontWeight="Bold"
+                   HorizontalAlignment="Center" Margin="10"/>
+
+        <!-- List of Tours -->
+        <ListView Grid.Row="1" ItemsSource="{Binding Tours}" SelectedItem="{Binding SelectedTour}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Tour Name" DisplayMemberBinding="{Binding Name}" Width="200"/>
+                    <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="400"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <!-- Buttons for CRUD -->
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+            <Button Content="Add" Width="80" Margin="5"/>
+            <Button Content="Edit" Width="80" Margin="5"/>
+            <Button Content="Delete" Width="80" Margin="5"/>
+        </StackPanel>
     </Grid>
 </Window>
