--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -1,35 +1,70 @@
 ﻿<Window x:Class="TourPlanner.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:TourPlanner.UI"
-        Title="Tour Planner" Height="450" Width="800">
-
+        Title="Tour Planner" Height="600" Width="900">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+        <!-- Menu Bar -->
+        <Menu VerticalAlignment="Top">
+            <MenuItem Header="File"/>
+            <MenuItem Header="Edit"/>
+            <MenuItem Header="Options"/>
+            <MenuItem Header="Help"/>
+        </Menu>
 
-        <!-- Title -->
-        <TextBlock Text="Tour Planner" FontSize="24" FontWeight="Bold"
-                   HorizontalAlignment="Center" Margin="10"/>
+       
 
-        <!-- List of Tours -->
-        <ListView Grid.Row="1" ItemsSource="{Binding Tours}" SelectedItem="{Binding SelectedTour}">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Tour Name" DisplayMemberBinding="{Binding Name}" Width="200"/>
-                    <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" Width="400"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <!-- Main Layout -->
+        <Grid Margin="10,60,10,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*"/>
+            </Grid.RowDefinitions>
 
-        <!-- Buttons for CRUD -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button Content="Add" Width="80" Margin="5"/>
-            <Button Content="Edit" Width="80" Margin="5"/>
-            <Button Content="Delete" Width="80" Margin="5"/>
-        </StackPanel>
+            <!-- Tour List -->
+            <GroupBox Header="Tours" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0">
+                <StackPanel>
+                    <ListBox x:Name="TourList" Height="150" ItemsSource="{Binding Tours}"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button Content="+" Width="30"/>
+                        <Button Content="-" Width="30"/>
+                        <Button Content="..." Width="30"/>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+
+            <!-- Tab Control -->
+            <TabControl Grid.Row="0" Grid.Column="1">
+                <TabItem Header="General"/>
+                <TabItem Header="Route"/>
+                <TabItem Header="Misc"/>
+            </TabControl>
+
+            <!-- Map Section -->
+            <Border Grid.Row="1" Grid.Column="1" BorderBrush="Black" BorderThickness="1">
+                <Image x:Name="MapImage" Stretch="Fill"/>
+            </Border>
+
+            <!-- Tour Logs -->
+            <GroupBox Header="Tour Logs" Grid.Row="2" Grid.Column="1">
+                <StackPanel>
+                    <DataGrid x:Name="TourLogGrid" AutoGenerateColumns="False" ItemsSource="{Binding TourLogs}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Date" Binding="{Binding Date}"/>
+                            <DataGridTextColumn Header="Duration" Binding="{Binding Duration}"/>
+                            <DataGridTextColumn Header="Distance" Binding="{Binding Distance}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Content="+" Width="30"/>
+                        <Button Content="..." Width="30"/>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+        </Grid>
     </Grid>
 </Window>
