--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -11,8 +11,6 @@
             <MenuItem Header="Help"/>
         </Menu>
 
-       
-
         <!-- Main Layout -->
         <Grid Margin="10,60,10,10">
             <Grid.ColumnDefinitions>
@@ -26,12 +24,23 @@
             </Grid.RowDefinitions>
 
             <!-- Tour List -->
-            <GroupBox Header="Tours" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0">
+            <GroupBox Header="Tours" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Height="500">
                 <StackPanel>
-                    <ListBox x:Name="TourList" Height="150" ItemsSource="{Binding Tours}"/>
+                    <!-- List of Tours (Only Names) -->
+                    <ListBox x:Name="TourList" Height="150"
+                             ItemsSource="{Binding Tours}"
+                             SelectedItem="{Binding SelectedTour}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+
+                    <!-- Buttons to Add/Delete Tours -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Button Content="+" Width="30"/>
-                        <Button Content="-" Width="30"/>
+                        <Button Content="+" Width="30" Command="{Binding AddTourCommand}"/>
+                        <Button Content="-" Width="30" Command="{Binding OpenRemoveTourWindowCommand}"/>
                         <Button Content="..." Width="30"/>
                     </StackPanel>
                 </StackPanel>
@@ -39,28 +48,60 @@
 
             <!-- Tab Control -->
             <TabControl Grid.Row="0" Grid.Column="1">
-                <TabItem Header="General"/>
-                <TabItem Header="Route"/>
-                <TabItem Header="Misc"/>
-            </TabControl>
+                <!-- General Information -->
+                <TabItem Header="General">
+                    <StackPanel Margin="10">
+                        <TextBlock Text="Name:"/>
+                        <TextBlock Text="{Binding SelectedTour.Name}" FontWeight="Bold"/>
 
-            <!-- Map Section -->
-            <Border Grid.Row="1" Grid.Column="1" BorderBrush="Black" BorderThickness="1">
-                <Image x:Name="MapImage" Stretch="Fill"/>
-            </Border>
+                        <TextBlock Text="Description:" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding SelectedTour.Description}" TextWrapping="Wrap"/>
+
+                        <TextBlock Text="From:" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding SelectedTour.From}"/>
+
+                        <TextBlock Text="To:" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding SelectedTour.To}"/>
+
+                        <TextBlock Text="Transport Type:" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding SelectedTour.TransportType}"/>
+
+                        <TextBlock Text="Distance (km):" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding SelectedTour.Distance}"/>
+
+                        <TextBlock Text="Estimated Time (hours):" Margin="0,10,0,0"/>
+                        <TextBlock Text="{Binding SelectedTour.EstimatedTime}"/>
+                    </StackPanel>
+                </TabItem>
+
+                <!-- Route Information -->
+                <TabItem Header="Route">
+                    <Border BorderBrush="Black" BorderThickness="1" Margin="10">
+                        <Image x:Name="MapImage" Stretch="Fill" Source="{Binding SelectedTour.ImagePath}"/>
+                    </Border>
+                </TabItem>
+
+                <!-- Miscellaneous Information -->
+                <TabItem Header="Misc">
+                    <TextBlock Text="Additional info can be placed here." Margin="10"/>
+                </TabItem>
+            </TabControl>
 
             <!-- Tour Logs -->
             <GroupBox Header="Tour Logs" Grid.Row="2" Grid.Column="1">
                 <StackPanel>
-                    <DataGrid x:Name="TourLogGrid" AutoGenerateColumns="False" ItemsSource="{Binding TourLogs}">
+                    <DataGrid x:Name="TourLogGrid" AutoGenerateColumns="False" ItemsSource="{Binding TourLogs}"
+                              SelectedItem="{Binding SelectedTourLog}">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Date" Binding="{Binding Date}"/>
                             <DataGridTextColumn Header="Duration" Binding="{Binding Duration}"/>
                             <DataGridTextColumn Header="Distance" Binding="{Binding Distance}"/>
                         </DataGrid.Columns>
                     </DataGrid>
+
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Content="+" Width="30"/>
+                        <Button Content="+" Width="30" Command="{Binding AddTourLogCommand}"/>
+                        <Button Content="-" Width="30" Command="{Binding RemoveTourLogCommand}"/>
                         <Button Content="..." Width="30"/>
                     </StackPanel>
                 </StackPanel>
