--- a/UI/AddTourLogWindow.xaml
+++ b/UI/AddTourLogWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TourPlanner.AddTourLogWindow"
+﻿<Window x:Class="UI.AddTourLogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Add Tour Log" Height="400" Width="400">
