--- a/UI/AddTourWindow.xaml
+++ b/UI/AddTourWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TourPlanner.AddTourWindow"
+﻿<Window x:Class="UI.AddTourWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Add Tour" Height="400" Width="400">
