--- a/UI/EditTourWindow.xaml
+++ b/UI/EditTourWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TourPlanner.EditTourWindow"
+﻿<Window x:Class="UI.EditTourWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Edit Tour" Height="400" Width="400">
