--- a/UI/Resources/UserControlls/ConfirmCancelButtons.xaml
+++ b/UI/Resources/UserControlls/ConfirmCancelButtons.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TourPlanner.UserControls.ConfirmCancelButtons"
+﻿<UserControl x:Class="UI.Resources.UserControlls.ConfirmCancelButtons"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Width="Auto" Height="Auto">
