--- a/UI/AddTourLogWindow.xaml
+++ b/UI/AddTourLogWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="UI.AddTourLogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add Tour Log" Height="400" Width="400">
+        Title="Add Tour Log" Height="450" Width="400">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -14,18 +14,29 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Date:" Grid.Row="0" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
+        <TextBlock Text="Date (yyyy-MM-dd):" Grid.Row="0" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
         <TextBox x:Name="DateTextBox" Grid.Row="0" Grid.Column="1" Margin="0,0,0,5"/>
 
-        <TextBlock Text="Duration (hours):" Grid.Row="1" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
+        <TextBlock Text="Duration (hh:mm:ss):" Grid.Row="1" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
         <TextBox x:Name="DurationTextBox" Grid.Row="1" Grid.Column="1" Margin="0,0,0,5"/>
 
         <TextBlock Text="Distance (km):" Grid.Row="2" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
         <TextBox x:Name="DistanceTextBox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,5"/>
 
-        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+        <TextBlock Text="Comment:" Grid.Row="3" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
+        <TextBox x:Name="CommentTextBox" Grid.Row="3" Grid.Column="1" Margin="0,0,0,5"/>
+
+        <TextBlock Text="Difficulty (1-5):" Grid.Row="4" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
+        <TextBox x:Name="DifficultyTextBox" Grid.Row="4" Grid.Column="1" Margin="0,0,0,5"/>
+
+        <TextBlock Text="Rating (1-5):" Grid.Row="5" Grid.Column="0" Margin="0,0,5,5" VerticalAlignment="Center"/>
+        <TextBox x:Name="RatingTextBox" Grid.Row="5" Grid.Column="1" Margin="0,0,0,5"/>
+
+        <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
             <Button Content="OK" Click="Confirm_Click" Margin="5"/>
             <Button Content="Cancel" Click="Cancel_Click" Margin="5"/>
         </StackPanel>
