--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -43,11 +43,17 @@
                     </ListBox>
 
                     <!-- Buttons to Add/Delete/Edit Tours -->
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Button Content="+" Width="30" Command="{Binding AddTourCommand}"/>
-                        <Button Content="-" Width="30" Command="{Binding OpenRemoveTourWindowCommand}"/>
-                        <Button Content="✎" Width="30" Command="{Binding OpenEditTourWindowCommand}" />
+                    <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Button Content="+" Width="30" Command="{Binding AddTourCommand}"/>
+                            <Button Content="-" Width="30" Command="{Binding OpenRemoveTourWindowCommand}"/>
+                            <Button Content="✎" Width="30" Command="{Binding OpenEditTourWindowCommand}" />
+                        </StackPanel>
+
+                        <!-- New Button to Add Random Tour -->
+                        <Button Content="Add Random Tour" Width="120" Margin="0,5,0,0" Click="AddRandomTour_Click"/>
                     </StackPanel>
+
                 </StackPanel>
             </GroupBox>
 
